[package]
authors = ["Branan Riley <me@branan.info>"]
categories = ["development-tools::cargo-plugins"]
description = "Cargo driver for building and flashing cntrlr projects"
documentation = "https://github.com/branan/cntrlr/blob/0.1.0/cargo-cntrlr/README.md"
edition = "2018"
homepage = "https://github.com/branan/cntrlr"
license = "AGPL-3.0-or-later"
name = "cargo-cntrlr"
readme = "README.md"
repository = "https://github.com/branan/cntrlr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
cargo = "0.49.0"
clap = "2.33.3"
cntrlr-build = { path = "../cntrlr-build", version = "0.1.0" }
subprocess = "0.2.6"
tempfile = "3.1.0"