[package]
authors = ["Branan Riley <me@branan.info>"]
categories = ["development-tools", "embedded"]
description = "Build script support for Cntrlr"
documentation = "https://docs.rs/cntrlr-build"
edition = "2018"
homepage = "https://github.com/branan/cntrlr"
license = "AGPL-3.0-or-later"
name = "cntrlr-build"
readme = "README.md"
repository = "https://github.com/branan/cntrlr"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
