[package]
authors = ["Branan Riley <me@branan.info>"]
categories = ["asynchronous", "development-tools", "embedded", "hardware-support", "no-std"]
description = "Simple, async embedded framework"
documentation = "https://docs.rs/cntrlr"
edition = "2018"
homepage = "https://github.com/branan/cntrlr"
license = "AGPL-3.0-or-later"
name = "cntrlr"
readme = "README.md"
repository = "https://github.com/branan/cntrlr"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true

[dependencies]
bit_field = "0.10.1"
cntrlr-macros = { path = "../cntrlr-macros", version = "0.1.0" }

[build-dependencies]
cntrlr-build = { version = "0.1.0", path = "../cntrlr-build" }

[features]
doc-cfg = []
